# ChangeLog for www-client/opera-next
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera-next/ChangeLog,v 1.111 2012/07/19 09:47:24 jer Exp $

*opera-next-12.50.1513 (19 Jul 2012)

  19 Jul 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.50.1513.ebuild:
  http://my.opera.com/desktopteam/blog/2012/07/19/12-50-marlin-html5-dnd-hwa-im
  provements

*opera-next-12.50.1497 (06 Jul 2012)

  06 Jul 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.01.1473.ebuild,
  +opera-next-12.50.1497.ebuild:
  http://my.opera.com/desktopteam/blog/2012/07/06/marlin-1250-swim

*opera-next-12.01.1491 (29 Jun 2012)

  29 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.01.1491.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/28/more-fixes-for-opera-12

  27 Jun 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Improve USE flag descriptions.

*opera-next-12.01.1486 (26 Jun 2012)

  26 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.01.1486.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/26/html5-dnd-fixes-for-12-01

  21 Jun 2012; Jeroen Roovers <jer@gentoo.org> opera-next-12.01.1473.ebuild:
  Do not call get_libdir in global scope.

*opera-next-12.01.1473 (20 Jun 2012)

  20 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.01.1473.ebuild:
  Add more pax-marking by Alex Efros (bug #421859).
  http://my.opera.com/desktopteam/blog/2012/06/20/new-snapshot-12-01

  18 Jun 2012; Jeroen Roovers <jer@gentoo.org> opera-next-12.00.1467.ebuild:
  Reorder SLOTs in x11-libs/gtk+ USE=gtk RDEPEND.

  15 Jun 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove USE=gtk3 description.

  14 Jun 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.00.1450.ebuild,
  -opera-next-12.00.1454.ebuild, -opera-next-12.00.1456.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/14/twelve-under-the-hood-improve
  ments-in-opera-12
