@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera/Attic/opera-12.01.1517.ebuild,v 1.1 2012/07/20 15:25:19 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera/Attic/opera-12.01.1517.ebuild,v 1.2 2012/07/26 15:15:22 johu Exp $
 
 EAPI="4"
 
@@ -52,8 +52,8 @@ GTKRDEPEND="
 "
 KDERDEPEND="
 	kde-base/kdelibs
-	x11-libs/qt-core
-	x11-libs/qt-gui
+	x11-libs/qt-core:4
+	x11-libs/qt-gui:4
 "
 GSTRDEPEND="
 	dev-libs/glib:2
