@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera-next/ChangeLog,v 1.111 2012/07/19 09:47:24 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera-next/ChangeLog,v 1.112 2012/07/26 15:12:31 johu Exp $
+
+  26 Jul 2012; Johannes Huber <johu@gentoo.org> opera-next-12.00.1467.ebuild,
+  opera-next-12.01.1486.ebuild, opera-next-12.01.1491.ebuild,
+  opera-next-12.50.1497.ebuild, opera-next-12.50.1513.ebuild:
+  Add missing slot dependencies on Qt.
 
 *opera-next-12.50.1513 (19 Jul 2012)
 
@@ -589,4 +594,3 @@
   +metadata.xml:
   Initial commit
   <http://my.opera.com/desktopteam/blog/swordfish-and-opera-next>.
-
